# data-bank-api

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
scripts/: __init__.py  guard.py
scripts/guards/: __init__.py  pattern_guard.py
src/api/: __init__.py  config.py  jobs.py
src/core/: __init__.py  corpus_download.py
src/data_bank_api/: __init__.py  app.py  client.py  config.py  errors.py  logging.py  storage.py
tests/: test_app_factory_startup.py  test_app_internal.py  test_auth_and_ranges.py  test_client.py  test_config_and_logging.py  test_errors_body.py  test_files_endpoints.py  test_health_ready.py  test_jobs_data_bank_upload.py  test_readyz_branches.py  test_scripts_guard.py  test_settings_branches.py  test_storage_branches.py
