[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-bank-api"
version = "0.1.0"
description = "Strictly-typed file storage API for service-to-service corpora exchange on Railway"
authors = ["Your Team <team@example.com>"]
packages = [{ include = "data_bank_api", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = {version = "^0.38.0", extras = ["standard"]}
typing-extensions = "^4.12.2"
python-multipart = "^0.0.20"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.3.1"
mypy = "^1.11.2"
ruff = "^0.14.4"
black = "^25.11.0"
types-requests = "^2.32.0.20241016"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
  "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.cast" = { msg = "Do not use typing.cast; prefer precise types or adapters." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
